--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,7 +55,7 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">Hello, I'm Bede</h1>
+            <h1 class="responsive-headline">Hi, I'm Bede</h1>
             
             <p>this page have been viewed <a id="counter"></a> times  &#128522 </p> 
             <ul class="social">
