--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,7 +82,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/me.jpg" alt="" />
+            <img class="profile-pic"  src="images/me.1.jpg" alt="" />
 
          </div>
 
